[package]
name = "http"
# When releasing to crates.io:
# - Update html_root_url in lib.rs.
# - Update CHANGELOG.md.
# - Create git tag
version = "0.2.8"
readme = "README.md"
repository = "https://github.com/ignassew/http-ordered"
license = "MIT OR Apache-2.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
  "ignassew"
]
description = """
Fork of http library that supports header ordering.
"""
keywords = ["http"]
categories = ["web-programming"]
edition = "2018"
# When updating this value, don't forget to also adjust the GitHub Actions config.
rust-version = "1.49.0"

[workspace]
members = [
  ".",
]
exclude = [
  "fuzz",
  "benches"
]

[dependencies]
bytes = "1"
fnv = "1.0.5"
itoa = "1"
indexmap = "1.9.2"

[dev-dependencies]
quickcheck = "0.9.0"
rand = "0.7.0"
seahash = "3.0.5"
serde = "1.0"
serde_json = "1.0"
doc-comment = "0.3"
